[tool.poetry]
name = "detecting-compression-side-channel-attack"
version = "0.1.0"
description = ""
authors = ["Sam(RYZEN-PC) <abdusamadov55@gamil.com>"]
readme = "README.md"
packages = [{include = "detecting_compression_side_channel_attack"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
